--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,19 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "h5py>=3.15.1",
+    "lmfit>=1.3.4",
+    "numba>=0.62.1",
     "numpy>=2.3.5",
     "pandas>=2.3.3",
+    "pywavelets>=1.9.0",
     "scikit-learn>=1.7.2",
     "scipy>=1.16.3",
     "seaborn>=0.13.2",
     "supersmoother>=0.4",
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=7.1.0",
+    "jupyter>=1.1.1",
 ]
